# fitsmgmt

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  verify_fitsmgmt.py
docs/: api.rst  conf.py  index.rst  package-scope.md  reorganization-plan.md  requirements.txt
src/astroimred/: __init__.py  _types.py  ccdutils.py  cli.py  io.py  logging.py  paths.py  pixels.py  summary.py  viz.py
src/astroimred/imops/: __init__.py  ccdutils.py  imstat.py  mathutils.py  pixels.py  viz.py
src/astroimred/mgmt/: __init__.py  _types.py  airmass.py  headers.py  io.py  logging.py  misc.py  paths.py  summary.py  wcstools.py
src/astroimred/phot/: __init__.py  aperture.py  apphot.py  aputil.py  background.py  center.py  daopsf.py  growth.py  logging.py  pillbox.py  polarimetry.py  radprof.py  seputil.py  util.py
src/astroimred/reduction/: __init__.py  cli.py  combutil.py  crrej.py  preproc.py
src/astroimred/reduction/imutil/: __init__.py  _imcombine_fits.py  config.py  docstrings.py  imarith.py  imcombine.py  imcopy.py  imsmooth.py  numba_combine.py  numba_reject.py  util_comb.py  util_lmedian.py  util_reject.py
src/fitsmgmt/: __init__.py  airmass.py  ccdutils.py  cli.py  filemgmt.py  files.py  hduutil.py  headers.py  images.py  imstat.py  io.py  logging.py  mathutils.py  misc.py  paths.py  pixels.py  summary.py  utils.py  viz.py  wcstools.py
tests/: conftest.py  test_airmass.py  test_astroimred.py  test_ccdutils.py  test_filemgmt.py  test_fitsmgmt.py  test_hduutil.py  test_headers.py  test_imstat.py  test_io.py  test_mathutils.py  test_misc.py  test_pixels.py  test_summary.py  test_wcstools.py  verify_astroimred.py  verify_fitsmgmt.py
tests/imops/: test_imstat.py  test_mathutils.py  test_pixels.py
tests/mgmt/: test_airmass.py  test_headers.py  test_io.py  test_misc.py  test_summary.py
tests/phot/: __init__.py  conftest.py  test_aperture.py  test_apphot.py  test_aputil.py  test_background.py  test_center.py  test_polarimetry.py  test_radprof.py  test_seputil.py  test_util.py
tests/reduction/: __init__.py  conftest.py  generate_imcombine_regression_data.py  test_imarith.py  test_imcombine.py  test_imcombine_regression.py  test_preproc.py
tests/reduction/data/: README.rst  component_regression.pkl  ndcombine_regression.pkl
