[project]
name = "fitsmgmt"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "ysBach", email = "ysbach93@gmail.com" }
]
requires-python = ">=3.9"
dependencies = [
    "astropy>=5.0",
    "astro-ndslice",
    "bottleneck",
    "numpy>=1.20",
    "pandas",
]

[project.optional-dependencies]
fast = [
    "fitsio",
    "numba",
    "numexpr",
    "scipy>=1.5",
]
viz = [
    "matplotlib>=3.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
