[project]
name = "astroimred"
version = "0.3.0"
description = "FITS file management and lightweight inspection utilities."
readme = "README.md"
authors = [
    { name = "ysBach", email = "ysbach93@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "astropy>=7.0",
    "astro-ndslice>=0.2",
    "bottleneck>=1.3.3",
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.scripts]
imred = "astroimred.reduction.cli:main"

[project.optional-dependencies]
full = [
    "astroscrappy>=1.1",
    "ccdproc>=2.0",
    "click>=8.0",
    "fitsio>=1.2",
    "matplotlib>=3.8.0",
    "numba>=0.59",
    "numexpr>=2.8",
    "pyarrow>=14",
    "scipy>=1.9.2",
]
reduction = [
    "astroscrappy>=1.1",
    "ccdproc>=2.0",
    "click>=8.0",
    "numba>=0.59",
    "scipy>=1.9.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
