[project]
name = "astroimred"
version = "0.3.0"
description = "FITS file management and lightweight inspection utilities."
readme = "README.md"
authors = [
    { name = "ysBach", email = "ysbach93@gmail.com" }
]
requires-python = ">=3.11"
# Core dependencies for basic manipulation of FITS
dependencies = [
    "astropy>=7.0",
    "astro-ndslice>=0.2",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14",
]

[project.scripts]
imred = "astroimred.reduction.cli:main"

[project.optional-dependencies]
phot = [
    "matplotlib>=3.9.1",
    "photutils>=2.0,<3.0",
    "scipy>=1.9.2",
    "sep>=1.4",
]
reduction = [
    "astroscrappy>=1.1",
    "bottleneck>=1.3.3",
    "ccdproc>=2.0",
    "click>=8.0",
    "numba>=0.59",
    "scipy>=1.9.2",
]
full = [
    "bottleneck>=1.3.3",
    "fitsio>=1.2",
    "astroscrappy>=1.1",
    "ccdproc>=2.0",
    "click>=8.0",
    "fitsio>=1.2",
    "matplotlib>=3.9.1",
    "numba>=0.59",
    "numexpr>=2.8",
    "photutils>=2.0,<3.0",
    "pyarrow>=14",
    "scipy>=1.9.2",
    "sep>=1.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "sphinx>=7.2",
    "sphinx-rtd-theme>=2.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "W",    # pycodestyle warnings
    "I",    # import sorting
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # comprehensions
    "SIM",  # simplifications
]
ignore = [
    "E501",  # Let the formatter wrap what it can; tolerate intentional long lines.
    "W605",  # Legacy astronomy strings often contain backslash-style notation.
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"src/astroimred/**/__init__.py" = ["F401", "F403"]

[tool.ruff.format]
line-ending = "auto"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
